fix the margin to align in the center

--- a/3d_style.css
+++ b/3d_style.css
@@ -5,7 +5,7 @@
 #div1 .red {color:red;}
 #div1 .yellow {color:yellow;}
 
-#div2 {position:relative; width:500px; height:150px; margin: 0 0; }
+#div2 {position:relative; width:900px; height:0px; margin: 0 0; }
 #div2 a {position:absolute; top:0px; left:0px; font-family: Microsoft YaHei; color:#fff; font-weight:bold; text-decoration:none; padding: 3px 6px; }
 #div2 a:hover {border: 1px solid #eee; background: #000; }
 #div2 .blue {color:blue;}
